fix: misalign wrap around bug

--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -5,7 +5,7 @@
   align-items: center;
   left: 0;
   right: 0;
-  margin: auto;
+  width: 85%;
   padding: 50px;
 }
 
